--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@ body { margin:0; padding:0; }
 <body>
 <div id='map'></div>
 <script>
-//      mapboxgl.setRTLTextPlugin('https://api.mapbox.com/mapbox-gl-js/plugins/mapbox-gl-rtl-text/v0.1.0/mapbox-gl-rtl-text.js');
+mapboxgl.setRTLTextPlugin('https://api.mapbox.com/mapbox-gl-js/plugins/mapbox-gl-rtl-text/v0.1.0/mapbox-gl-rtl-text.js');
 var map = new mapboxgl.Map({
   container: 'map', style: 'style.json',
   attributionControl: true, hash: true
